# neverplayalone_subnet

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: auth.py  config.py  main.py  models.py  store.py
cli/: main.py
common/: __init__.py  api_client.py  chain.py
docker/proxy/: Dockerfile  model_pairs.json  server.py
docs/: miner.md  validator.md
miner/: cli.py  config.py
scripts/: dump_state.py  init_db.py  miner_setup.sh  run-validator.sh  validator_autoupdate.sh  validator_setup.sh  validator_update.sh
shared/: api_client.py  chain.py
tests/: test_api_client.py  test_burn_weights.py  test_champion_consensus.py  test_proxy_manager.py  test_proxy_server.py
validator/: api_client.py  chain.py  config.py  duel.py  loop.py  main.py  owner.py  proxy.py  round_evaluation.py
