[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neverplayalone-subnet"
version = "0.1.0"
description = "Never Play Alone Bittensor subnet (netuid 98) — Minecraft agent benchmarking"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "bittensor>=8.0",
    "httpx>=0.27",
    "numpy>=1.24",
    "typer>=0.12",
]
# Validators must additionally install npabench; scripts/validator_setup.sh
# clones https://github.com/neverplayalone/neverplayalone_bench and installs it.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
npacli = "miner.cli:app"
npa-validator = "validator.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "miner*", "validator*"]
exclude = ["scripts*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py310"
